tests/sumo/errors/action_step_fractional_warning/options.sumo
-n net.net.xml --route-files input_routes.rou.xml --no-step-log  --default.action-step-length=1.2 --end=1.0

